<resources>
    <string name="app_name">SnapPoint</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_post_fragment_appbar_title">게시글 작성하기</string>
    <string name="create_post_fragment_appbar_title_modify">게시글 수정하기</string>
    <string name="create_post_fragment_til_title_hint">제목</string>
    <string name="item_text_block_til_hint">본문 내용</string>
    <string name="item_image_block_til_address_hint">이미지 주소</string>
    <string name="item_image_block_til_description_hint">이미지 설명</string>
    <string name="create_post_fragment_empty_title">제목을 입력해주세요.</string>
    <string name="create_post_fragment_empty_blocks">내용을 입력해주세요.</string>
    <string name="create_post_fragment_empty_text">비어있는 블록이 존재합니다.</string>
    <string name="create_post_fragment_empty_media">사진이나 동영상을 추가해주세요.</string>
    <string name="create_post_fragment_post_api_success">요청 성공 !</string>
    <string name="message_image_permission_denied">이미지를 추가하려면 저장소에 접근할 수 있는 권한이 필요합니다.</string>
    <string name="message_video_permission_denied">동영상을 추가하려면 저장소에 접근할 수 있는 권한이 필요합니다.</string>
    <string name="message_image_permission_required">이미지를 추가하려면 권한을 허용해야 합니다.</string>
    <string name="message_video_permission_required">동영상을 추가하려면 권한을 허용해야 합니다.</string>
    <string name="menu_around">주변</string>
    <string name="menu_subscription">구독</string>
    <string name="menu_popular_post">인기글</string>
    <string name="menu_settings">설정</string>
    <string name="activity_main_fab_content_description">present_location_button</string>
    <string name="activity_main_sb_hint">검색할 주소를 입력하세요.</string>
    <string name="activity_main_permission_allow">사용자의 위치에 접근하도록 허용합니다.</string>
    <string name="activity_main_permission_deny">내 위치 정보를 사용하려면 위치 권한이 필요합니다.</string>
    <string name="around_title">주변 게시글</string>
    <string name="btn_preview_text">미리보기</string>
    <string name="btn_view_post_text">게시글 보기</string>
    <string name="create_post_activity_post_creation_success">게시글 작성 성공했습니다 !</string>
    <string name="create_post_activity_post_modification_success">게시글 수정 성공했습니다 !</string>
    <string name="signup_fragment_create_account_success">계정을 생성했습니다.</string>
    <string name="signup_fragment_error_email_form">이메일 형식으로 입력해주세요.</string>
    <string name="signup_fragment_error_email_duplicate">이미 사용중인 이메일입니다.</string>
    <string name="signup_fragment_error_password_length">8~16자 영문 대•소문자, 숫자, 특수문자를 사용하세요.</string>
    <string name="signup_fragment_error_password_confirm_mismatch">비밀번호가 일치하지 않습니다.</string>
    <string name="signup_fragment_error_nickname">별명은 3글자 이상 입력해주세요.</string>
    <string name="signup_fragment_fail_duplicate">이미 존재하는 이메일입니다.</string>
    <string name="signup_fragment_fail">회원가입에 실패했습니다.</string>
    <string name="login_activity_e_mail">E-MAIL</string>
    <string name="login_activity_password">PASSWORD</string>
    <string name="login_activity_sign_in">SIGN IN</string>
    <string name="login_activity_fail">이메일 또는 비밀번호를 잘못 입력했습니다\n입력하신 내용을 다시 확인해주세요.</string>
    <string name="search_location_fail">입력한 주소를 찾을 수 없습니다.\n다시 한번 확인해 주세요</string>
    <string name="login_activity_sign_up">SIGN UP</string>
    <string name="btn_search_here">현재 위치에서 다시 검색</string>
    <string name="splash_activity_auto_login">자동로그인 중입니다.</string>
    <string name="sign_in_fragment_auto_login_success">자동로그인 했습니다.</string>
    <string name="sign_in_fragment_auto_login_fail">로그인 정보가 없거나 만료되었습니다\n다시 시도해주세요</string>
    <string name="setting_fragment_remove_all_marker">스냅 포인트 지우기</string>
    <string name="setting_fragment_sign_out">로그아웃!</string>
    <string name="setting_fragment_sign_out_alert">로그아웃하시겠습니까?</string>
    <string name="setting_fragment_sign_out_success">로그아웃 했습니다</string>
    <string name="setting_fragment_sign_out_fail">로그아웃에 실패했습니다\n네트워크 연결을 확인하세요</string>
    <string name="get_around_posts_failed">주변 게시글 목록을 불러오는 데 실패했습니다..</string>
    <string name="item_video_block_til_address_hint">동영상 주소\n</string>
    <string name="item_video_block_til_description_hint">동영상 설명</string>
    <string name="subscription_fragment_title">로컬에 저장된 게시글</string>
    <string name="cluster_preview_title">등록된 스냅 포인트</string>
    <string name="video_edit_activity_appbar_title">동영상 편집하기</string>
    <string name="video_edit_activity_tv_upload_without_edit">편집하지 않고 업로드</string>
    <string name="post_not_exist">주변에 등록된 게시글이 없습니다.</string>
    <string name="preview_app_bar_close">close</string>
    <string name="post_app_bar_edit">게시글 수정</string>
    <string name="post_app_bar_delete">게시글 삭제</string>
    <string name="post_app_bar_report">신고하기</string>
    <string name="post_app_bar_ignore">작성자 차단하기</string>
    <string name="post_app_bar_more">more</string>
    <string name="signin_fragment_sign_in_with_email">이메일로 로그인</string>
    <string name="signin_fragment_title">회원 로그인</string>
    <string name="signin_fragment_description">스냅포인트를 찾아 주셔서 감사합니다</string>
    <string name="signup_fragment_title">회원 가입</string>
    <string name="signup_fragment_description">스냅포인트에 오신 것을 환영합니다!</string>
    <string name="signup_fragment_email_hint">E-MAIL</string>
    <string name="signup_fragment_password_hint">PASSWORD</string>
    <string name="signup_fragment_password_confirm_hint">PASSWORD CONFIRM</string>
    <string name="signup_fragment_nickname_hint">NICKNAME</string>
    <string name="signup_fragment_sign_up_with_email">이메일로 회원가입</string>
    <string name="auth_activity_sign_in_google_button">Google로 계속하기</string>
    <string name="auth_activity_sign_in_email_button_text">이메일로 로그인</string>
    <string name="auth_activity_sign_up_button_text">회원가입</string>
    <string name="view_post_activity_success_to_delete_post">게시글을 삭제했습니다.</string>
    <string name="view_post_activity_fail_to_delete_post">게시글을 삭제하지 못했습니다.</string>
    <string name="create_post_button_text">게시물 작성</string>
    <string name="fragment_being_prepared">페이지 준비중입니다.</string>
    <string name="feature_being_prepared">기능 준비중입니다.</string>
    <string name="maps_marker_activity_confirm_position">이 위치로 설정</string>
    <string name="dialog_yes">예</string>
    <string name="dialog_no">아니요</string>
    <string name="moments_ago">방금 전</string>
    <string name="minutes_ago">분 전</string>
    <string name="hours_ago">시간 전</string>
    <string name="days_ago">일 전</string>
    <string name="weeks_ago">주 전</string>
    <string name="months_ago">개월 전</string>
    <string name="years_ago">년 전</string>
</resources>