<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/post_more"
        android:icon="@drawable/icon_three_dots"
        android:title="@string/post_app_bar_more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/post_edit"
                android:icon="@drawable/icon_edit_circle"
                android:title="@string/post_app_bar_edit"
                app:showAsAction="withText" />
            <item
                android:id="@+id/post_delete"
                android:icon="@drawable/icon_delete"
                android:title="@string/post_app_bar_delete"
                app:showAsAction="withText" />
            <item
                android:id="@+id/post_report"
                android:icon="@drawable/icon_flag"
                android:title="@string/post_app_bar_report"
                app:showAsAction="withText" />
            <item
                android:id="@+id/post_ignore"
                android:icon="@drawable/icon_cancel_circle"
                android:title="@string/post_app_bar_ignore"
                app:showAsAction="withText" />
        </menu>
    </item>
</menu>